# screenshot2react

./: .gitignore  README.md  README_no_screenshot.md  convert_css.js  extract_info_from_webpage.py  extract_text.js  main.py  package-lock.json  package.json  process_screenshots.py  pyproject.toml  screenshot_capture.py  section_screenshots.py  test_lyniq.py  url.txt  video_analysis.py
frontend/: README.md  pnpm-lock.yaml  tailwind.config.js
frontend/app/: main.tsx
frontend/app/components/viewer/: html-viewer.tsx
template-demo/: .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js
template-demo/app/: layout.tsx  page.tsx
template-demo/components/: creativestudio-template.tsx
template-demo/lib/: constants.ts
tests/: test_section_screenshots.py  url.txt
