[project]
name = "screenshot2react"
version = "0.1.0"
description = "A CLI tool to screenshot sections of a webpage"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.40.0",
    "pillow>=9.0.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "aiohttp>=3.8.0",
]

[project.scripts]
screenshot2react = "section_screenshots:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
